[gd_scene load_steps=4 format=3 uid="uid://dgw3qs3ycci6l"]

[ext_resource type="Script" path="res://scene/gui/Popup.gd" id="1_u1ak1"]
[ext_resource type="PackedScene" uid="uid://dya7jdklr68ej" path="res://scene/gui/PopupOption1.tscn" id="2_at8n2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgjln"]
bg_color = Color(0.156863, 0.172549, 0.203922, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="Popup" type="PanelContainer"]
custom_minimum_size = Vector2(480, 200)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_bgjln")
script = ExtResource("1_u1ak1")

[node name="PopupMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PopupText" type="Label" parent="PopupMargin"]
layout_mode = 2
size_flags_vertical = 1

[node name="PopupOptionsContainer" type="Control" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2

[node name="PopupOptions" type="HBoxContainer" parent="PopupOptionsContainer"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -31.0
offset_right = 225.0
offset_bottom = 25.0
grow_vertical = 0
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
size_flags_vertical = 4

[node name="PopupOption1" parent="PopupOptionsContainer/PopupOptions" instance=ExtResource("2_at8n2")]
layout_mode = 2
